--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   --type-first: Helvetica, Arial, sans-serif;
   --type-second: 'Spectral', Georgia;
   font-family: var(--type-first);
+  padding-top: 4rem;
 }
 
 h1,
@@ -16,6 +17,10 @@ h3,
 h4,
 p {
   margin: 0px;
+}
+
+a {
+  text-decoration: none;
 }
 
 ul,
