--- a/src/Components/Forms/Input.module.css
+++ b/src/Components/Forms/Input.module.css
@@ -15,7 +15,7 @@
 
 .input:focus,
 .input:hover {
-  outline: non;
+  outline: none;
   border-color: #fb1;
   background: white;
   box-shadow: 0 0 0 3px #fea;
