--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
 }
 
 body {
+  padding-top: 4rem;
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-second: 'Spectral', georgia;
+  --type-second: 'Spectral', Georgia;
   font-family: var(--type-first);
-  padding-top: 4rem;
 }
 
 h1,
@@ -19,11 +19,6 @@ h3,
 h4,
 p {
   margin: 0px;
-}
-
-a {
-  text-decoration: none;
-  color: #333;
 }
 
 ul,
@@ -43,6 +38,11 @@ input {
   display: block;
   font-size: 1rem;
   font-family: var(--type-first);
+  color: #333;
+}
+
+a {
+  text-decoration: none;
   color: #333;
 }
 
