--- a/src/Components/Feed/FeedPhotosItem.module.css
+++ b/src/Components/Feed/FeedPhotosItem.module.css
@@ -1,5 +1,5 @@
 .photo:nth-child(2) {
-  grid-column: 2/4;
+  grid-column: 2 / 4;
   grid-row: span 2;
 }
 
@@ -21,7 +21,7 @@
   grid-area: 1/1;
 }
 
-.photo span {
+.visualizacao {
   background: rgba(0, 0, 0, 0.3);
   color: white;
   font-size: 1rem;
@@ -32,7 +32,7 @@
   display: none;
 }
 
-.photo span::before {
+.visualizacao::before {
   width: 16px;
   height: 10px;
   content: '';
@@ -41,6 +41,6 @@
   background: url('../../Assets/visualizacao.svg') no-repeat;
 }
 
-.photo:hover span {
+.photo:hover .visualizacao {
   display: flex;
 }
