--- a/src/Components/Helper/Image.module.css
+++ b/src/Components/Helper/Image.module.css
@@ -13,7 +13,7 @@
 .skeleton {
   grid-area: 1/1;
   height: 100%;
-  background-image: linear-gradient(90deg #eee 0px, #fff 50%, #eee 100%);
+  background-image: linear-gradient(90deg, #eee 0px, #fff 50%, #eee 100%);
   background-color: #eee;
   background-size: 200%;
   animation: skeleton 1.5s infinite linear;
